ajout media querries pour card-menu version desktop

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -46,105 +46,107 @@
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
                 </div>
               </div>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Fricassée d'escargot</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Au piment d'espelette</p>
-                      <span class="card-menu__price">25€</span>
+              <div class="card-menu__dishes-wrapper">
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">ENTREES</p>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Fricassée d'escargot</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Au piment d'espelette</p>
+                        <span class="card-menu__price">25€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Foie gras de canard mi-cuit</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et ses copeaux de truffe noire</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Foie gras de canard mi-cuit</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et ses copeaux de truffe noire</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class= "card-menu__recipe-heading">Oeuf au plat</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
-                      <span class="card-menu__price">20€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class= "card-menu__recipe-heading">Oeuf au plat</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
+                        <span class="card-menu__price">20€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">PLATS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Accompagné de sa ribambelle de légumes</p>
-                      <span class="card-menu__price">40€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">PLATS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Accompagné de sa ribambelle de légumes</p>
+                        <span class="card-menu__price">40€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Parmentier de queue de boeuf</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">À la truffe noire sur sa purée de panais</p>
-                      <span class="card-menu__price">35€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Parmentier de queue de boeuf</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">À la truffe noire sur sa purée de panais</p>
+                        <span class="card-menu__price">35€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Filet de turbot</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Aux agrumes</p>
-                      <span class="card-menu__price">44€</span>
+                  <div class="card-menu__recipe recipe">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Filet de turbot</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Aux agrumes</p>
+                        <span class="card-menu__price">44€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
-              <article class="card-menu__dishes">
-                <p class="card-menu__text">DESSERTS</p>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Paris-Brest</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Revisité</p>
-                      <span class="card-menu__price">18€</span>
+                </article>
+                <article class="card-menu__dishes">
+                  <p class="card-menu__text">DESSERTS</p>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Paris-Brest</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Revisité</p>
+                        <span class="card-menu__price">18€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Macaron au chocolat d'exception</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Et glace à la vanille de Madagascar</p>
-                      <span class="card-menu__price">22€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Macaron au chocolat d'exception</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Et glace à la vanille de Madagascar</p>
+                        <span class="card-menu__price">22€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-                <div class="card-menu__recipe recipe ">
-                  <div class="recipe__wrapper ">
-                    <h2 class="card-menu__recipe-heading">Mousse au chocolat</h2>
-                    <div class="card-menu__recipe-price">
-                      <p class="card-menu__recipe-text">Au piment d'Espelette et à la truffe noire</p>
-                      <span class="card-menu__price">23€</span>
+                  <div class="card-menu__recipe recipe ">
+                    <div class="recipe__wrapper ">
+                      <h2 class="card-menu__recipe-heading">Mousse au chocolat</h2>
+                      <div class="card-menu__recipe-price">
+                        <p class="card-menu__recipe-text">Au piment d'Espelette et à la truffe noire</p>
+                        <span class="card-menu__price">23€</span>
+                      </div>
                     </div>
+                    <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                   </div>
-                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
-                </div>
-              </article>
+                </article>
+              </div>
               <button class="add-cart">Commander</button>
             </div>
           
